# metu-ros-pkg

./: README.md
stacks/affordance_learning/al_acts/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/affordance_learning/al_behavior/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/affordance_learning/al_hri_demo/: .cproject  .project  .pydevproject  CMakeLists.txt  hri_main.cpp  mainpage.dox  manifest.xml
stacks/affordance_learning/al_human/: .cproject  .project  .pydevproject  CMakeLists.txt  human_controller.yaml  human_controller_plugin.xml  human_tf_publisher.cpp  main.cpp  mainpage.dox  manifest.xml
stacks/affordance_learning/al_human/defs/: human.urdf.xacro  human2.urdf.xacro  human2.urdf.xacro.3  human2.urdf.xacro.bak  human2.urdf.xacro.bak.2  human2.urdf.xacro.bak.3  human3.urdf.xacro  human3.urdf.xacro_  human3.urdf_working.xacro  human3_figured_out_the_order_error.urdf.xacro  human3_torso_working.urdf.xacro  human_w_hat.urdf.xacro
stacks/affordance_learning/al_human/include/al_human/: human_controller.h
stacks/affordance_learning/al_human/launch/: human2_state_publisher.launch  human3_state_publisher.launch  human_pub.launch  human_self_filter.launch  human_self_filter_w_cam_id.launch  human_state_publisher.launch  human_tracker.launch  load_human_def.launch
stacks/affordance_learning/al_human/src/: camera_state_pub.cpp  human_controller.cpp  human_state_pub.cpp  test.cpp  wiimote_state_pub.cpp
stacks/affordance_learning/al_human/src/al_human/msg/: _Joint.py  __init__.py
stacks/affordance_learning/al_human/src/al_human/srv/: _SetJoints.py  __init__.py
stacks/affordance_learning/al_human/srv/: SetJoints.srv
stacks/affordance_learning/al_icub/: .cproject  .project  .pydevproject  CMakeLists.txt  head_server.cpp  icub_js_pub.cpp  mainpage.dox  manifest.xml
stacks/affordance_learning/al_memory/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/affordance_learning/al_msgs/: .cproject  .project  .pydevproject  (+2 more)
stacks/affordance_learning/al_perception/: .cproject  .project  .pydevproject  CMakeLists.txt  FindMatlab.cmake  mainpage.dox  manifest.xml
stacks/affordance_learning/al_perception/catkin_generated/: 05.catkin-test-results.sh.develspace.context.py  env_cached.sh  generate_cached_setup.py  setup_cached.sh
stacks/affordance_learning/al_perception/config/: perception_settings.yaml
stacks/affordance_learning/al_perception/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
stacks/affordance_learning/al_perception/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
stacks/affordance_learning/al_perception/gtest/: Makefile
stacks/affordance_learning/al_perception/include/al_perception/feature_extractors/: FeatureExtractor.h  HumanFExtractor.h  SpatialFExtractor.h  SurfaceFExtractor.h
stacks/affordance_learning/al_perception/include/al_perception/objects/: Entity.h
stacks/affordance_learning/al_perception/include/al_perception/perception/: Perception.h
stacks/affordance_learning/al_perception/include/al_perception/perceptors/: Visual3D.h
stacks/affordance_learning/al_perception/launch/: perception.launch.bak  perception_icub_bak.launch  perception_icub_no_self_filter.launch  perception_manager.launch  perception_only.launch  perception_only_icub.launch  perception_pr2.launch
stacks/affordance_learning/al_perception/src/: main.cpp
stacks/affordance_learning/al_perception/src/feature_extractors/: FeatureExtractor.cpp  HumanFExtractor.cpp  SpatialFExtractor.cpp  SurfaceFExtractor.cpp
stacks/affordance_learning/al_perception/src/objects/: Entity.cpp
stacks/affordance_learning/al_perception/src/perception/: Perception.cpp
stacks/affordance_learning/al_perception/src/perceptors/: Perceptor.cpp  Visual3D.cpp
stacks/affordance_learning/al_speech/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  text_to_speech.cpp
stacks/affordance_learning/al_speech/launch/: speech.launch
stacks/affordance_learning/al_utils/: .cproject  .project  .pydevproject  CMakeLists.txt  manifest.xml  manifest.xml~
stacks/affordance_learning/al_utils/include/al_utils/: al_utils.h  al_utils.h~  collision_map_viz.h
stacks/affordance_learning/al_utils/launch/: f_used_gazebo_srv_calls.txt
stacks/affordance_learning/al_utils/src/: al_utils.cpp  collision_map_viz.cpp  request_behavior.cpp  request_object.cpp
stacks/affordance_learning/al_visualization/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  rand_effects_gen.cpp
stacks/affordance_learning/al_visualization/src/: viz_effects.cpp  viz_features.cpp  viz_human_features.cpp  viz_object_affordances.cpp  viz_object_features.cpp  viz_objects_boxes.cpp  viz_objects_features.cpp  viz_objects_surfaces.cpp  viz_scene_affordances.cpp
stacks/affordance_learning/al_worlds/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/affordance_learning/al_worlds/launch/: icub.launch
stacks/affordance_learning/al_worlds/src/: hat_tf_pub.cpp  hat_tf_pub_w_calibration.cpp  kinect_tf_cal_pub.cpp  kinect_tf_pub.cpp  multi_kinect_tf_pub.cpp  rand_torso_hat_tf_gen.cpp  sr4k_tf_pub.cpp
stacks/robocup_ssl/: clear_pkgs  make_pkgs  stack.xml
stacks/robocup_ssl/ssl_path_planner_/: .cproject  CMakeLists.txt  mainpage.dox  manifest.xml  ssl_path_planner.pro
stacks/robocup_ssl/ssl_path_planner_/include/ssl_path_planner/: SSLPathPlanner.h  SSLPathPlanner.h.bak
stacks/robocup_ssl/ssl_path_planner_/src/: SSLPathPlanner.cpp  SSLPathPlanner.cpp.bak  main.cpp
stacks/robocup_ssl/ssl_vision/: .cproject  .project  .pydevproject  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
stacks/robocup_ssl/ssl_vision/config/: ssl_vision_conf.yaml
stacks/robocup_ssl/ssl_vision/include/ssl_vision/: SSLRealVision.h  SSLVision.h  SSLWSimVision.h
stacks/robocup_ssl/ssl_vision/launch/: ssl_vision.launch
stacks/robocup_ssl/ssl_vision/src/: SSLRealVision.cpp  SSLVision.cpp  SSLWSimVision.cpp  main.cpp
(+1177 files in other folders)
